test/classes/errors/newValueNotType.bad
{x = 42}
newValueNotType.chpl:10: error: halt reached - argument to ! is nil
